# NeonIntegrations

./: .gitignore  AsmblyMessageFactory.py  EMAIL_REMINDER_INVESTIGATION.md  GmailTeacherReminder.py  Google.py  LeatherClassTicketInfo.json  LeatherClassTicketUpdate.py  NEON_USER_TYPES_GUIDE.md  NeonEventArchive.py  NeonEventPATCH.py  README.md  SWintegration.py  altaAudit.py  attendanceToTestout.py  aws_ssm.py  checkWaiver.py  classFeedbackAutomation.py  classTierPopulater.py  classes.json  cncFields.py  coverage_report.txt  dailyClassChecker.py  dailyClassReminder.py  dailyMaintenance.py  discourseList.py  discourseUpdateGroups.py  discourseUpdateHaxors.py  discourseUtil.py  flodeskUtil.py  giftCertSearch.py  gmailUtil.py  mailjetUtil.py  neonAcctUpdate.py  neonDIDupdate.py  neonDiscountCodeGen.py  neonGetMembers.py  neonStorageAssignmentsAPI.py  neonUtil.py  openPathUpdateAll.py  openPathUpdateSingle.py  (+6 more)
WIP/: NeonAnnualReport.py  NeonAnnualReport2024.py  NeonEventArchive.py  NeonEventPATCH.py  NeonEventReport.py
alta_open_lambda/: Dockerfile  lambda_function.py
archived/: classTimeUpdater.py  cncFields.py  giftCertSearch.py  neonDiscountCodeGen.py  neonDumpMember.py  neonGetAccounts.py  neonStorageAssignmentsAPI.py  openPathPruneUsers.py  weeklyClassReminder.py
examples/: checkWaiver.py  discourseGET.py  discourseUpdateHaxors.py  discourse_audit.py  neonAcctSearch.py  neonAcctUpdate.py  neonDGroupUpdate.py  neonDIDupdate.py  neonEvents.py  neonEventsSetInactive.py  neonFakeFacilityTourDate.py  neonGetFields.py  neonGetMembers.py  neonGetOutputFields.py  util.py  (+4 more)
(+43 files in other folders)
