[project]
name = "neonintegrations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "mailjet-rest>=1.5.1",
    "pydantic>=2.12.3",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "types-boto3>=1.40.64",
    "types-requests>=2.32.4.20250913",
]
